src/objects/GTMJourney__c.object
<CustomObject>
    <description>From the acquisition of the MQL, through its activation, all the way up to the acceleration, this is where you can track your customer Go-To-Market Planning ...</description>
    <fields>
        <fullName>AccountCountry__c</fullName>
        <formula>TEXT(Account__r.Country__c)</formula>
        <label>Account Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountPlan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Plan</label>
        <referenceTo>Account_Plan__c</referenceTo>
        <relationshipLabel>Go-To-Market Journeys</relationshipLabel>
        <relationshipName>Go_To_Market_Journeys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Go-To-Market Journeys</relationshipLabel>
        <relationshipName>Go_To_Market_Journeys</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Go-To-Market Journeys</relationshipLabel>
        <relationshipName>Go_To_Market_Journeys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FollowUpComments__c</fullName>
        <label>Follow-Up Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>SalesActionStep__c</fullName>
        <label>Sales Action Step</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Stage__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Customer Profiling Questions</fullName>
                </value>
                <value>
                    <fullName>Referral Network Id (Implants)</fullName>
                </value>
                <value>
                    <fullName>Appointment for Demo</fullName>
                </value>
                <value>
                    <fullName>Pre-call Plan</fullName>
                </value>
                <value>
                    <fullName>Demo Presentation</fullName>
                </value>
                <value>
                    <fullName>Invoiced Purchase</fullName>
                </value>
                <value>
                    <fullName>Implant: Surgical Kit Training</fullName>
                </value>
                <value>
                    <fullName>Implant: Resto Kit Training</fullName>
                </value>
                <value>
                    <fullName>Implant: Referral Training</fullName>
                </value>
                <value>
                    <fullName>Implant: Regen Training</fullName>
                </value>
                <value>
                    <fullName>Implant: Atlantis Training</fullName>
                </value>
                <value>
                    <fullName>Lab: LDP Training</fullName>
                </value>
                <value>
                    <fullName>Lab: Atlantis Training</fullName>
                </value>
                <value>
                    <fullName>Lab: Cercon Training</fullName>
                </value>
                <value>
                    <fullName>Lab: Referral Journey Map</fullName>
                </value>
                <value>
                    <fullName>Implant: Regen</fullName>
                </value>
                <value>
                    <fullName>Implant: Equipment</fullName>
                </value>
                <value>
                    <fullName>Implant: Atlantis</fullName>
                </value>
                <value>
                    <fullName>Implant: MIS (Mixed User)</fullName>
                </value>
                <value>
                    <fullName>Lab: Atlantis</fullName>
                </value>
                <value>
                    <fullName>Lab: LDP</fullName>
                </value>
                <value>
                    <fullName>Lab: Cercon</fullName>
                </value>
                <value>
                    <fullName>Micro-Learning Opportunity</fullName>
                </value>
                <value>
                    <fullName>Influencer Opportunity</fullName>
                </value>
                <value>
                    <fullName>Case Reports</fullName>
                </value>
                <value>
                    <fullName>Study Club Owner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Awareness</fullName>
                    <default>true</default>
                    <label>Awareness</label>
                </value>
                <value>
                    <fullName>Discovery</fullName>
                </value>
                <value>
                    <fullName>Demo</fullName>
                </value>
                <value>
                    <fullName>Onboarding</fullName>
                </value>
                <value>
                    <fullName>SOW Growth</fullName>
                </value>
                <value>
                    <fullName>Advocate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CAD/CAM</fullName>
                </value>
                <value>
                    <fullName>Endodontics</fullName>
                </value>
                <value>
                    <fullName>Imaging</fullName>
                </value>
                <value>
                    <fullName>Implants</fullName>
                </value>
                <value>
                    <fullName>Lab (Prosthetics)</fullName>
                </value>
                <value>
                    <fullName>Orthodontics</fullName>
                </value>
                <value>
                    <fullName>Preventive</fullName>
                </value>
                <value>
                    <fullName>Restorative</fullName>
                </value>
                <value>
                    <fullName>Treatment Centers</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Go-To-Market Journey</label>
    <nameField>
        <label>Journey Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Go-To-Market Journeys</pluralLabel>
    <recordTypes>
        <fullName>US_Implants</fullName>
        <active>true</active>
        <label>US: Implants</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>